# GasGuard

./: DELIVERABLES_CHECKLIST.md  FUNDING.json  PR_DESCRIPTION.md  README.md  emptyfile.md  package-lock.json  test-implementations.js  tsconfig.json
.github/workflows/: gasguard.yml
apps/rust/: Cargo.toml
apps/rust/property-token/: Cargo.toml
apps/rust/property-token/src/: lib.rs  loops.rs  msg.rs  security.rs  state.rs
apps/rust/property-token/tests/: rbac_revocation_tests.rs  replay_tests.rs
apps/web/: package-lock.json  package.json  tailwind.config.js
config/: gasguard.config.json  validator.ts
docs/: PLUGIN_DEVELOPMENT.md  PLUGIN_PUBLISHING.md  REENTRANCY_GUARD.md  ROLE_REVOCATION_RULES.md  RULES.md  RULE_TESTING_FRAMEWORK.md
docs/rules/: general.md  solidity.md
e2e/: full_scan_tests.ts  jest.config.js  setup.ts
examples/: reentrancy_attack.sol  reentrancy_examples.sol  vulnerable_bank.sol
libs/ast/: Cargo.toml
libs/auto-fix/: Cargo.toml
libs/cache/: cache.service.ts  file-hash.service.ts  incremental-cache.service.ts  index.ts  package.json  tsconfig.json
libs/chains/: base-adapter.ts  evm-adapter.ts  index.ts  soroban-adapter.ts
libs/engine/: Cargo.toml
libs/engine/analyzers/: solidity-analyzer.ts
libs/engine/src/: lib.rs
libs/monitoring/: health-check.ts
libs/rpc/: index.ts  (+2 more)
scripts/: build-binary.js  deploy-manager.ts  generate-rule-docs.ts
src/: tsconfig.json
tests/: analysis-runner.spec.ts  circuit_breaker.spec.ts  config_registry.spec.ts  incremental-analysis.spec.ts  solidity_reentrancy.spec.ts  soroban_scan.spec.ts
(+185 files in other folders)
