[package]
name = "gasguard-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
gasguard-rules = { path = "../../packages/rules" }
gasguard-ast = { path = "../ast" }
gasguard-rule-engine = { path = "../rule-engine" }
gasguard-parser-rust = { path = "../parsers/rust" }
gasguard-parser-solidity = { path = "../parsers/solidity" }
gasguard-parser-vyper = { path = "../parsers/vyper" }
gasguard-auto-fix = { path = "../auto-fix" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.0"
sha256 = "1.5"
regex = "1.0"

[dev-dependencies]
mockall = "0.14.0"
rstest = "0.26.1"
